[metadata]
name = env-file
version = 2019.01.28
url = https://github.com/looking-for-a-job/env-file.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = env

[options]
install_requires = 
	click
	public
	setuptools
	values
scripts = 
	scripts/env-file
packages = 
	env_file
