[metadata]
name = env-file
version = 2019.02.22
url = https://github.com/looking-for-a-job/env-file.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = env

[options]
install_requires = 
	click
	public
	setuptools
	values
packages = 
	env_file
