# https://pypi.org/project/setupcfg-generator/
[metadata]
name = env-file
version = 2019.4.13
url = https://github.com/looking-for-a-job/env-file.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = env

[options]
install_requires = 
	public
	setuptools
	values
packages = 
	env_file
